methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:3: error: not found: value setCouleurBrossemarquer
  def diagD(c:Color) {setCouleurBrossemarquer(c);avance();droite();avance();gauche();marquer();}
                      ^PatternPicture:4: error: not found: value setCouleurBrossemarquer
  def diagG(c:Color) {setCouleurBrossemarquer(c);droite();avance();droite();avance();gauche();gauche();marquer()}
                      ^