methods.picture.PatternPicture.scala.code
override def run() {
  def marquer() {baisseBrosse();leveBrosse();}
  def diagD(c:Color) {setCouleurBrossemarquer(c);avance();droite();avance();gauche();marquer();}
  def diagG(c:Color) {setCouleurBrossemarquer(c);droite();avance();droite();avance();gauche();gauche();marquer()}
gauche();avance();diagG(Color.RED);diagD(Color.BLUE)
}